--- a/test.ipynb
+++ b/test.ipynb
@@ -23,13 +23,13 @@
    "source": [
     "Data Science Programming Languages :-\n",
     "\n",
-    "<ul> \n",
+    "<ol> \n",
     "    <li>Python</li>\n",
     "    <li>R</li>\n",
     "    <li>JavaScript</li>\n",
     "    <li>Java</li>\n",
     "    <li>C++</li>\n",
-    "</ul>\n"
+    "</ol>\n"
    ]
   },
   {
@@ -39,7 +39,7 @@
    "source": [
     "Data Science Libraries :-\n",
     "\n",
-    "<ul>\n",
+    "<ol>\n",
     "    <li>Matplotlib</li>\n",
     "    <li>Seaborn</li>\n",
     "    <li>Plotly</li>\n",
@@ -50,7 +50,7 @@
     "    <li>Tensorflow</li>\n",
     "    <li>nltk</li>\n",
     "    <li>pytorch</li>\n",
-    "</ul>\n"
+    "</ol>\n"
    ]
   },
   {
@@ -60,15 +60,15 @@
    "source": [
     "Data Science Tools :-\n",
     "\n",
-    "<ul>\n",
-    "    <li>PostgreSQL</li>\n",
-    "    <li>Apache Hive</li>\n",
-    "    <li>GitHub</li>\n",
-    "    <li>JupyterLab</li>\n",
-    "    <li>RStudio</li>\n",
-    "    <li>Apache Spark</li>\n",
-    "    <li>Kubeflow</li>\n",
-    "</ul>\n"
+    "<table>\n",
+    "    <tr><td>PostgreSQL</td></tr>\n",
+    "    <tr><td>Apache Hive</td></tr>\n",
+    "    <tr><td>GitHub</td></tr>\n",
+    "    <tr><td>JupyterLab</td></tr>\n",
+    "    <tr><td>RStudio</td></tr>\n",
+    "    <tr><td>Apache Spark</td></tr>\n",
+    "    <tr><td>Kubeflow</td></tr>\n",
+    "</table>\n"
    ]
   },
   {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d909bc8b",
    "metadata": {},
    "outputs": [
@@ -93,24 +93,38 @@
        "304"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Below expression is an example of arithmetic operations\n",
     "5 * 54 + 34"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "b32b77f1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.1"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# Below is function written to calculate minute to hours\n",
     "def minutesToHours(minutes: int) -> float:\n",
-    "    return minutes / 60.0\n"
+    "    return minutes / 60.0\n",
+    "minutesToHours(366)"
    ]
   },
   {
